Fix misaligned user name in room

--- a/src/styles/room.css
+++ b/src/styles/room.css
@@ -124,7 +124,7 @@
     display: flex;
     flex-direction: column;
     color: #D4DCE8;
-    text-align: center;
+    align-items: center;
     height: 100%;
     margin: 0 15px 0 15px;
 }
